--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI for FastAPI House Price Prediction App
+name: CI
 
 on:
   push:
@@ -7,22 +7,19 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build-and-run:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Build Docker image
+        run: docker build -t my-fastapi-app .
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Run Docker container (optional if you want to test it)
+        run: docker run -d -p 8000:8000 my-fastapi-app
+
 
     - name: Run tests
       run: |
